<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SolitaireCG</string>
    <string name="menu_bakersgame">Freecell (by suit: Baker\'s)</string>
    <string name="menu_blackwidow">Spider (1 suit: black widow)</string>
    <string name="menu_fortythieves">Forty Thieves</string>
    <string name="menu_freecell">Freecell (by alt-color)</string>
    <string name="menu_golf">Golf (no build on king)</string>
    <string name="menu_golf_wrapcards">Golf (wrap cards)</string>
    <string name="menu_klondike_dealone">Klondike (deal 1)</string>
    <string name="menu_klondike_dealthree">Klondike (deal 3)</string>
    <string name="menu_spider">Spider (4 suits)</string>
    <string name="menu_tarantula">Spider (2 suits: tarantula)</string>
    <string name="menu_tripeaks">TriPeaks (no build on king)</string>
    <string name="menu_tripeaks_wrapcards">TriPeaks (wrap cards)</string>
    <string name="menu_vegas_dealone">Vegas (deal 1)</string>
    <string name="menu_vegas_dealthree">Vegas (deal 3)</string>
    <string name="menu_selectgame">Select Game</string>
    <string name="menu_new">New</string>
    <string name="menu_restart">Restart</string>
    <string name="menu_options">Options</string>
    <string name="menu_stats">Stats</string>
    <string name="menu_help">Help</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_blank" />
    <string name="solitaire_layout_text_text" />

    <!-- Shown on the options preference screen -->
    <string name="options_title">Options</string>
    <string name="big_cards">Large Card Art</string>
    <string name="big_cards_desc">Show simple card art for improved visibility</string>
    <string name="display_time">Display Time</string>
    <string name="display_time_desc">Show elapsed time since game started</string>
    <string name="auto_move">Auto Move</string>
    <string name="auto_move_desc">Automatically move possible cards to foundations</string>
    <string name="always">Always</string>
    <string name="fling_only">Fling Only</string>
    <string name="never">Never</string>
    <string name="lock_landscape">Lock Landscape</string>
    <string name="lock_landscape_desc">Lock game in landscape orientation</string>

    <!-- Shown in the game if needed -->
    <string name="toast_blank_menu">This menu item intentionally left blank.</string>
    <string name="toast_restart_invalid">Game over. Restart not available.</string>
    <string name="toast_use_start_menu">Game over. Use menu to start new game.</string>
    <string name="toast_no_undo_left">No undo left.</string>

    <!-- Shown on the splash screen at first startup -->
    <string name="splash_text">Press anywhere to start\n\nTIP: Press ^ at bottom center of screen for alternate menu.
    </string>

    <!-- Shown when a game is won -->
    <string name="win_text">You Win!\n\nUse the menu ^ to start a new game.</string>

    <!-- Messages shown on the help window -->

    <!-- The argument is the version number of the SolitaireCG application -->
    <string name="help_window_title">Solitaire Card Games %s Help</string>
    <string name="readme_header">README file from source code</string>
    <string name="copying_header">COPYING file from source code</string>

    <!-- Messages shown on the stats window -->

    <string name="accept">Accept</string>
    <string name="clear">Clear Stats</string>

    <!-- The argument is the pretty game name, such as "Klondike (Dealing Three)" or "Golf" -->
    <string name="stats_for_game">%s Statistics</string>

    <string name="stats_wins_and_attempts">Wins: %1$d Attempts: %2$d</string>
    <string name="stats_winning_percentage">Winning Percentage: %s%%</string>
    <string name="stats_fastest_time">Fastest Time: %s</string>

    <!-- The argument is the user's high score as an integer -->
    <string name="stats_high_score">High Score: %s</string>
    <string name="not_enough_live">Not enough life</string>
    <string name="out_of_lives">Out of life</string>
    <string name="recharge_full_lives">Restore full life by</string>
    <string name="watch_video">Watch Video</string>
    <string name="lives_recharged">Life restored.</string>
    <string name="use_2_coin">Use 2 Coins</string>
    <string name="coin_not_enough">Coin not enough. Win game to get coin.</string>
    <string name="sound">Sound</string>
    <string name="button_card_sound">Button sound or sound when card is dragged.</string>
    <string name="app_info">App Info</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="more">More</string>
    <string name="project_open_source">Project Open Source</string>
    <string name="contact_us">Contact us at support@gwnbs.com</string>
    <string name="copyright_text"><![CDATA[Original Work & Copyright 2008 <b>Google LLC</b>.<br/>Modified <small><small><b>by</b></small></small> <b>Curtis Gedak</b> 2015, 2016, 2017. https://solitairecg.sourceforge.io
    <br/>Modified with ads <small><small><b>by</b></small></small> <b>Daltray Nababan (GWNBS)</b> 2021.
    <br/>Licensed under Apache License 2.0 https://www.apache.org/licenses/LICENSE-2.0]]></string>
</resources>
