<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:title="@string/big_cards"
        android:icon="@drawable/ic_card_game"
        android:summary="@string/big_cards_desc"
        android:defaultValue="false"
        android:key="DisplayBigCards" />
    <CheckBoxPreference
        android:title="@string/display_time"
        android:icon="@drawable/ic_time"
        android:summary="@string/display_time_desc"
        android:defaultValue="true"
        android:key="DisplayTime" />
    <ListPreference
        android:title="@string/auto_move"
        android:summary="@string/auto_move_desc"
        android:icon="@drawable/ic_moving"
        android:defaultValue="1"
        android:key="AutoMoveLevel"
        android:entries="@array/auto_move"
        android:entryValues="@array/auto_move_value" />
    <CheckBoxPreference
        android:title="@string/sound"
        android:icon="@drawable/ic_sound"
        android:summary="@string/button_card_sound"
        android:defaultValue="true"
        android:key="Sound" />
    <CheckBoxPreference
        android:title="@string/lock_landscape"
        android:icon="@drawable/ic_landscape"
        android:summary="@string/lock_landscape_desc"
        android:defaultValue="false"
        android:key="LockLandscape" />
</PreferenceScreen>
