<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/layoutInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/dialog_background"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textAppName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textAppVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.8"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:text="v.1.1.1"
                android:textColor="@color/white"
                android:textSize="15sp"
                tools:ignore="HardcodedText" />

        </LinearLayout>

        <TextView
            android:id="@+id/textDeveloped"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:autoLink="web"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:autoLink="web"
            android:text="App Icon https://www.flaticon.com/authors/icongeek26"
            android:textColor="@color/white"
            android:textSize="15sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/textPrivacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18sp"
            android:alpha="0.8"
            android:background="?selectableItemBackground"
            android:text="@string/privacy_policy"
            android:textColor="@color/colorLink"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textOpenSource"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.8"
            android:background="?selectableItemBackground"
            android:text="@string/project_open_source"
            android:textColor="@color/colorLink"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textMore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.8"
            android:background="?selectableItemBackground"
            android:text="@string/more"
            android:textColor="@color/colorLink"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:alpha="0.8"
            android:autoLink="email"
            android:background="?selectableItemBackground"
            android:text="@string/contact_us"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_background"
        android:contentDescription="@null"
        android:padding="3dp"
        android:src="@drawable/ic_close"
        app:layout_constraintBottom_toTopOf="@+id/layoutInfo"
        app:layout_constraintEnd_toEndOf="@+id/layoutInfo"
        app:layout_constraintStart_toEndOf="@+id/layoutInfo"
        app:layout_constraintTop_toTopOf="@+id/layoutInfo" />

</androidx.constraintlayout.widget.ConstraintLayout>