<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menuRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layoutOptions"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp"
        android:paddingTop="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@null"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                app:layout_constraintStart_toEndOf="@+id/imageBack"
                app:layout_constraintEnd_toStartOf="@+id/layoutLives"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:id="@+id/textCoinTalent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:visibility="visible"
                    android:text="0"
                    android:gravity="start"
                    android:drawableStart="@drawable/ic_chip"
                    android:drawableLeft="@drawable/ic_chip"
                    app:drawableStartCompat="@drawable/ic_chip"
                    android:textSize="15sp"
                    android:drawablePadding="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/textCountTimer"
                    tools:ignore="HardcodedText,UseCompatTextViewDrawableXml" />

                <TextView
                    android:id="@+id/textCountTimer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:visibility="gone"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:textSize="12sp"
                    android:gravity="end"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/textCoinTalent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/layoutLives"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:background="@color/colorDivider" />

        <TextView
            android:id="@+id/textSelectGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:drawableEnd="@drawable/ic_arrow_right"
            android:drawableRight="@drawable/ic_arrow_right"
            android:gravity="center_vertical"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:paddingBottom="5dp"
            android:text="@string/menu_selectgame"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:drawableEndCompat="@drawable/ic_arrow_right"
            tools:ignore="UseCompatTextViewDrawableXml" />

        <TextView
            android:id="@+id/textNewGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="?selectableItemBackground"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/menu_new"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textRestartGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="?selectableItemBackground"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/menu_restart"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="?selectableItemBackground"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/menu_options"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textStats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="?selectableItemBackground"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/menu_stats"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textHelp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="?selectableItemBackground"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/menu_help"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="?selectableItemBackground"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/app_info"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textExit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="?selectableItemBackground"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/menu_exit"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>