<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/layoutAddLives"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="30dp"
        android:background="@drawable/dialog_background"
        android:padding="15dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textWatchVideo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="@string/recharge_full_lives"/>

        <Button
            android:id="@+id/buttonWatch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="15sp"
            android:layout_gravity="start"
            android:fontFamily="serif"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/watch_video"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_play"
            android:drawableLeft="@drawable/ic_play" />

        <Button
            android:id="@+id/buttonUseCoin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:layout_gravity="start"
            android:fontFamily="serif"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/use_2_coin"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_chip"
            android:drawableLeft="@drawable/ic_chip" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:contentDescription="@null"
        android:background="@drawable/dialog_background"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="@+id/layoutAddLives"
        app:layout_constraintTop_toTopOf="@+id/layoutAddLives"
        app:layout_constraintBottom_toTopOf="@+id/layoutAddLives"
        app:layout_constraintStart_toEndOf="@+id/layoutAddLives"/>

</androidx.constraintlayout.widget.ConstraintLayout>